<resources>
    <string name="standard_melding">Husk avtalen i dag!</string>
    <string name="utsendelse_tidspunkt">11:30</string>
    
    <string name="app_name">mappe2</string>
    <string name="btn_showContacts">VIS KONTAKTER</string>
    <string name="btn_showAppointments">VIS AVTALER</string>
    <string name="tv_Appointments">Dagens Avtaler</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact_btn">legg til kontakt</string>
    <string name="etNavn">Navn</string>
    <string name="edTelefonNr">Telefon nr.</string>
    <string name="btnLeggTil">Legg Til</string>
    <string name="oppdater_btn">Oppdater</string>
    <string name="legg_til_kontakt_btn">Legg til kontakt</string>
    <string name="klokkeslett_avtale">Klokkeslett</string>
    <string name="dato">Dato</string>
    <string name="sted">Sted</string>
    <string name="melding">Melding</string>
    <string name="kontakt_sette_avtale_med">Kontakt å sette avtale med</string>
    <string name="legg_til_avtale">Legg til avtale</string>
    <string name="venner_header">Venner:</string>
    <string name="textview">TextView</string>
    <string name="kontakt">Kontakt</string>
    <string name="velg_dato">Velg Dato</string>
    <string name="tidspunkt">Tidspunkt</string>
    <string name="go_back_to_avtale_list">Go back to avtale list</string>
    <string name="oppdater_dato">Oppdater Dato</string>
    <string name="oppdater_avtale">oppdater avtale</string>
    <string name="back_to_avtale_list">Back to Avtale List</string>
</resources>